<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="true"
    android:orientation="vertical">

    <Button
        style="@style/ButtonStyle"
        android:text="@string/spotify_button"
        android:id="@+id/spotify_button"
        android:onClick="openApplication"/>

    <Button
        style="@style/ButtonStyle"
        android:text="@string/scores_button"
        android:id="@+id/scores_button"
        android:onClick="openApplication" />

    <Button
        style="@style/ButtonStyle"
        android:text="@string/library_button"
        android:id="@+id/library_button"
        android:onClick="openApplication"/>

    <Button
        style="@style/ButtonStyle"
        android:text="@string/build_button"
        android:id="@+id/build_button"
        android:onClick="openApplication" />

    <Button
        style="@style/ButtonStyle"
        android:text="@string/xyz_button"
        android:id="@+id/xyz_button"
        android:onClick="openApplication"/>

    <Button
        style="@style/ButtonStyle"
        android:text="@string/capstone_button"
        android:id="@+id/capstone_button"
        android:onClick="openApplication"/>

</LinearLayout>
